Fix for overlapping controls

--- a/ui-react/src/components/Body.module.css
+++ b/ui-react/src/components/Body.module.css
@@ -17,6 +17,10 @@
     margin-bottom: 15px;
 }
 
+.customGap {
+  gap: 6rem;
+}
+
 .contentContainer {
 }
 
